WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144426
Crash at WebCore::Document::absoluteRegionForEventTargets
https://bugs.webkit.org/show_bug.cgi?id=144426
Summary
Crash at WebCore::Document::absoluteRegionForEventTargets
Simon Fraser (smfr)
Reported
2015-04-29 18:29:26 PDT
Crash at WebCore::Document::absoluteRegionForEventTargets
Attachments
Patch
(9.82 KB, patch)
2015-04-29 18:32 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-04-29 18:32:23 PDT
Created
attachment 252020
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-04-29 18:33:05 PDT
rdar://problem/20502166
Tim Horton
Comment 3
2015-04-29 18:35:27 PDT
Comment on
attachment 252020
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252020&action=review
> LayoutTests/fast/events/wheelevent-in-reattached-frame-expected.txt:6 > +PASS internals.wheelEventHandlerCount() is 0
Are there tests that test that this works at all?
Simon Fraser (smfr)
Comment 4
2015-04-29 18:36:07 PDT
(In reply to
comment #3
)
> Comment on
attachment 252020
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=252020&action=review
> > > LayoutTests/fast/events/wheelevent-in-reattached-frame-expected.txt:6 > > +PASS internals.wheelEventHandlerCount() is 0
Yes!
> Are there tests that test that this works at all?
Simon Fraser (smfr)
Comment 5
2015-04-29 18:40:06 PDT
https://trac.webkit.org/r183600
Alexey Proskuryakov
Comment 6
2015-04-29 19:15:54 PDT
This broke a bunch of tests:
https://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r183600%20(13679)/results.html
Simon, are you available to fix now?
Alexey Proskuryakov
Comment 7
2015-04-29 19:58:35 PDT
And by "a bunch", I mean the two new tests:
https://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fevents%2Fwheelevent-in-frame.html
https://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fevents%2Fwheelevent-in-reattached-frame.html
Rolling out.
WebKit Commit Bot
Comment 8
2015-04-29 19:58:47 PDT
Re-opened since this is blocked by
bug 144432
Simon Fraser (smfr)
Comment 9
2015-04-29 20:57:00 PDT
I forgot to commit a required resource for the tests.
Simon Fraser (smfr)
Comment 10
2015-04-29 21:17:08 PDT
Re-landed with test fix:
https://trac.webkit.org/r183614
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug