Source/WebCore/dom/Document.cpp
@@ -5949,11 +5949,6 @@ void Document::didAddWheelEventHandler(Node& node)
 
     m_wheelEventTargets->add(&node);
 
-    if (Document* parent = parentDocument()) {
-        parent->didAddWheelEventHandler(*this);
-        return;
-    }
-
     wheelEventHandlersChanged();
 
     if (Frame* frame = this->frame())
@@ -5978,11 +5973,6 @@ void Document::didRemoveWheelEventHandler(Node& node, EventHandlerRemoval remova
 
     if (!removeHandlerFromSet(*m_wheelEventTargets, node, removal))
         return;
-
-    if (Document* parent = parentDocument()) {
-        parent->didRemoveWheelEventHandler(*this);
-        return;
-    }
 
     wheelEventHandlersChanged();
 
